appId: ${APP_ID}
---
- scrollUntilVisible:
      element:
          id: 'ChallengeModeSwitchSelectors.Root'
      direction: DOWN
      timeout: 10000
- tapOn:
      id: 'ChallengeModeSwitchSelectors.Root'
- scrollUntilVisible:
      element:
          id: 'ChallengeConditionsRowSelectors.Root'
      direction: DOWN
      timeout: 10000
