appId: ${APP_ID}
---
- extendedWaitUntil:
    visible: '^Open$'
    timeout: 3000
    optional: true
- runFlow:
    when:
      visible: '^Open$'
    commands:
      - tapOn:
          text: '^Open$'
          retryTapIfNoChange: true
      - extendedWaitUntil:
          notVisible: '^Open$'
          timeout: 30000
