url: https://www.suuudokuuu.com/shared?sudokuString=837142956561938427429675183642519378953287641178364295714896532296753814385421769%7C.37142956561938427429675183642519378953287641178364295714896532296753814385421769&score=9999&mistakes=1&elapsedTime=35&isFinished=false&hasCandidates=false
---
- launchApp
- tapOn: "Відкрити головоломку"
- tapOn:
    id: "CellSelectors.Root"
    index: 0
- tapOn:
    id: "AvailableValueItemSelectors.Button"
    containsDescendants:
      - text: "8"
- assertVisible: "Переможець-переможець,.*"
- assertVisible:
    rightOf: "Ви набрали.*"
    text: "9999"
- assertVisible: "Допоможіть Україні перемогти!"
- tapOn: "Зіграти знову"
- assertVisible: "Почати заново"
